--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ a:hover {
 
 .loader {
   height: 81vh;
-  display: flex;
+  display: flex !important;
   justify-content: center;
   align-items: center;
 }
