feat: :sparkles: News section
uses Bing api through rapid API to display news related to crypto topic, In the homepage only display 6 news, in the detail News display 12 news and also user can filter which topic and will display the news based on that topic

--- a/src/App.css
+++ b/src/App.css
@@ -304,9 +304,11 @@ a:hover {
   width: 70%;
 }
 
-.news-image-container .img {
+.news-image-container img {
   width: 100px;
   height: 100px;
+  max-width: 200px;
+  max-height: 100px;
 }
 .news-card p {
   color: black;
