--- a/src/App.css
+++ b/src/App.css
@@ -361,7 +361,7 @@ a:hover {
   width: 250px;
 }
 .crypto-card-container {
-  min-height: 65vh !important;
+  min-height: 65vh;
 }
 .crypto-card {
   min-width: 250px;
