--- a/client/src/App.css
+++ b/client/src/App.css
@@ -67,6 +67,14 @@ a:hover {
   align-items: center;
   padding: 1rem 0;
 }
+
+.refer-logo-brand {
+  width: 150px;
+}
+.global-stats-heading-container {
+  display: flex;
+  align-items: center;
+}
 .crypto-card {
   min-width: 250px;
 }
