feat: :sparkles: add Exchanges page with front end.
-Title and BrandBackLink element to display dummy data and CoinGecko brand
 -Use Table from ant Design to render the data
 Use ChartJS to display a chart base on Exchange trading volume price in the last 7 days, use Logic to determine where to display red line or green line base on the price comparation between the first and last value
 Tooltip from ANT to support when hover on the Trust Score explain

-no real data from backend

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -309,6 +309,22 @@ a:hover {
   margin-top: 20px !important;
 }
 
+/* Exchanges page */
+/* .exchange-name-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+} */
+.exchanges-headers {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.process-container {
+  display: flex;
+}
+
 .footer {
   background-color: #001529;
   display: flex;
